# audiblez-kokoro-pipeline

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.sh
config/: christmas-carol-voices.json  dickens-substitutions.json  substitutions.json  voice_config.json
src/: __init__.py  __main__.py  audio_utils.py  batch_convert.py  epub_parser.py  format_wrapper.py  kokoro_direct.py  llm_pipeline.py  multi_voice.py  pipeline.py  preprocess.py
tests/: conftest.py  test_epub_parser.py  test_integration.py  test_multi_voice.py  test_preprocess.py  test_regressions.py
